# AIEvoDev

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: llm_config.ini
specs/: example_test_spec.yaml
src/: utils.py
src/agents/: test_generator_agent.py  tools.py
src/core/: cli.py  main_orchestrator.py
src/drq_engine/: evolution_orchestrator.py  fitness_evaluator.py
src/environment/: testing_env.py
src/llm_api_connectors/: llm_provider.py
src/prompts/: context_builder.py
src/spec_parser/: spec_parser.py
src/utils/: fault_injector.py
